fixup! fix vertical alignment in table rows

--- a/plugins/portals-list.css
+++ b/plugins/portals-list.css
@@ -98,6 +98,7 @@
   text-align: center;
   font-size: 20px;
   line-height: 13px;
+  vertical-align: middle;
 }
 
 #portalslist .history.unvisited {
